Update jdk 1.8 to 11 and Spring Version 2.3.0.RELEASE to 2.5.4